Fixed cross-browser g-browser grid layout issues

--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -145,7 +145,6 @@ strong {
 .hero-image {
 	position: relative;
 	height: 300px;
-	opacity: 0;
 	z-index: 100;
 
 	@media (min-width: 768px) and (max-width: 992px) {
@@ -177,7 +176,7 @@ strong {
 }
 
 .hero-image-home {
-    background: #c3b8a8 url('../images/home/home-hero.jpg') no-repeat left bottom;
+	background: #c3b8a8 url('../images/home/home-hero.jpg') no-repeat left bottom;
     background-size: cover;
 }
 
