--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -37,6 +37,6 @@
 .home-content-container-3 {
     .bg-image {
     	min-height: 270px;
-	    background: #c3b8a8 url('../images/home/light-tan-pipes-bg.jpg') no-repeat center bottom;
+	    background: #c3b8a8 url('../images/home/light-tan-pipes-bg.jpg') no-repeat center center;
     }
 }
